--- a/frontend/index.html
+++ b/frontend/index.html
@@ -3,18 +3,14 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>pe-charcha-chat-space</title>
-    <meta name="description" content="Lovable Generated Project" />
-    <meta name="author" content="Lovable" />
+    <title>ChatsPeCharcha</title>
+    <meta name="description" content="ChatsPeCharcha - Real Time Chat Application" />
+    <meta name="author" content="Jatin Panday" />
 
-    <meta property="og:title" content="pe-charcha-chat-space" />
-    <meta property="og:description" content="Lovable Generated Project" />
+    <meta property="og:title" content="ChatsPeCharcha" />
+    <meta property="og:description" content="ChatsPeCharcha - Real Time Chat Application" />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
-
-    <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@lovable_dev" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta property="og:image" content="https://res.cloudinary.com/dfsdgoejf/image/upload/dashScreenshot_jhwgng.png" />
   </head>
 
   <body>
